removed scala from "common", "test-utilities" modules. Field, type resolver, etc